Blender not Saving all Dyntopo Sculpts #40691

Closed
opened 2014-06-18 20:04:09 +02:00 by Saib · 11 comments

System Information
Windows 7 and GTX 470

Blender Version
Broken: Bug exists in both 2.71 Release Candidate 1 and 2.70 Final

Blender doesn't always save dyntopo sculpts. I'll dyntopo sculpt multiple objects in Blender, save the file, and only a few objects will still have the dyntopo details when I reopen the file.

Exact steps for others to reproduce the error

  1. Open attached file, "23 Koalaman 1_2.blend" in Blender 2.71 Release Candidate 1 or 2.70 Final. 23_Koalaman_1_2.blend
  2. In the Outliner, Click on "K - Head"
  3. Switch to Sculpt mode
  4. Turn on Dyntopo
  5. Sculpt the object.
  6. In the outliner, Click on "K - Ears"
  7. Turn on Dyntopo
  8. Sculpt the object.
  9. Save file as "23 Koalaman 1_3.blend"
  10. Close Blender
  11. Open Blender
  12. Open "23 Koalaman 1_3.blend"
  13. You'll see that "K - Ears" has saved its new sculpt but "K - Head" hasn't.
**System Information** Windows 7 and GTX 470 **Blender Version** Broken: Bug exists in both 2.71 Release Candidate 1 and 2.70 Final Blender doesn't always save dyntopo sculpts. I'll dyntopo sculpt multiple objects in Blender, save the file, and only a few objects will still have the dyntopo details when I reopen the file. **Exact steps for others to reproduce the error** 1) Open attached file, "23 Koalaman 1_2.blend" in Blender 2.71 Release Candidate 1 or 2.70 Final. [23_Koalaman_1_2.blend](https://archive.blender.org/developer/F94672/23_Koalaman_1_2.blend) 2) In the Outliner, Click on "K - Head" 3) Switch to Sculpt mode 4) Turn on Dyntopo 5) Sculpt the object. 6) In the outliner, Click on "K - Ears" 7) Turn on Dyntopo 8) Sculpt the object. 9) Save file as "23 Koalaman 1_3.blend" 10) Close Blender 11) Open Blender 12) Open "23 Koalaman 1_3.blend" 13) You'll see that "K - Ears" has saved its new sculpt but "K - Head" hasn't.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @saib

Added subscriber: @saib

Added subscriber: @ygtsvtr

Added subscriber: @ygtsvtr

I can confirm this bug. If you switch each sculpt from sculpt mode to object mode then the file saves everything properly. It fails when both objects are in sculpt mode and file is saved.

I can confirm this bug. If you switch each sculpt from sculpt mode to object mode then the file saves everything properly. It fails when both objects are in sculpt mode and file is saved.
Author

Just confirmed that ygtsvtr's workaround works; the problem goes away if all the objects are in object mode when saved. Thank you so much ygtsvtr!!!

Just confirmed that ygtsvtr's workaround works; the problem goes away if all the objects are in object mode when saved. Thank you so much ygtsvtr!!!
Author

Just confirmed that bug is in 2.71 RC2. Workaround works in RC2 as well.

Just confirmed that bug is in 2.71 RC2. Workaround works in RC2 as well.
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-06-25 13:56:50 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, mind looking into the issue?

@Psy-Fi, mind looking into the issue?

This issue was referenced by dcc6300ddd

This issue was referenced by dcc6300dddbd28ce335b450cfb44b2c4affa3ed8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dcc6300ddd.

Closed by commit dcc6300ddd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40691
No description provided.