Fix T40691, dyntopo changes lost on save if sculpting on multiple objects.

Flush edits for all objects, not just the active one. Here we might want
to disallow leaving an object on sculpt mode when selecting another, but
this works, no need to enforce it.